2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Do not pass NULL data to epc_contents_new, when passing empty strings
	to epc_contents_new_dup.

	* libepc/contents.c: Handle empty strings in epc_contents_new_dup.

2007-11-30  Mathias Hasselmann  <mathias@openismus.com>

	Show message on root page when no resources have been published yet.

	* libepc/publisher.c: Enhance epc_publisher_handle_root.

2007-11-29  Mathias Hasselmann  <mathias@openismus.com>

	Really shutdown the server in epc_publisher_quit,
	to allow for instance change of the network protocol.

	* libepc/publisher.c: Shutdown the server in epc_publisher_quit.

2007-11-29  Mathias Hasselmann  <mathias@openismus.com>

	Set G_DEBUG=fatal-warnings and EPC_DEBUG=1 on testing.

	* libepc/dispatcher.c:
	Just print a message, instead of a warning on service collisions.
	* tests/test-runner.sh: Set G_DEBUG and EPC_DEBUG, if not set yet.

2007-11-29  Mathias Hasselmann  <mathias@openismus.com>

	Sanitize the progress-hook model by using just user_data.

	* libepc/shell.c: Move epc_shell_default_progress_hooks into
	epc_shell_set_progress_hooks functions. Update signatures of
	epc_shell_progress_begin, epc_shell_progress_update and
	epc_shell_progress_end. Change default progress hooks to deal
	with the new data model. Add epc_shell_progress_end_default.
	Call epc_shell_progress_update with a progress of -1 from
	epc_shell_progress_begin to make the epc_shell_progress_begin
	hook optional.
	* libepc/shell.h: Remove return value of epc_shell_progress_begin.
	Remove context argument for epc_shell_progress_update and
	epc_shell_progress_end. Update EpcShellProgressHooks signatures
	to match those changes and remove message argument from
	EpcShellProgressHooks::begin hook.
	* libepc-ui/progress-window.c: Update progress hooks for new
	model. Add EpcProgressWindowContext, epc_progress_window_context_new
	and epc_progress_window_context_free. Allow NULL as message argument
	for epc_progress_window_new.